--- a/views/index.hbs
+++ b/views/index.hbs
@@ -11,7 +11,7 @@
         
     </style>
 </head>
-<body style="background-color: #47e0d282;">
+<body style="background-color: #f3f3f382;">
     <div class="menu">
         <div class="container">
             <nav class="navbar navbar-expand-lg navbar-light bg-light" >
@@ -22,12 +22,6 @@
                             <li class="nav-item">
                                 <a class="nav-link active" aria-current="page" href="/">Home</a>
                             </li>
-                            {{!-- <li class="nav-item">
-                                <a class="nav-link" href="#">Link</a>
-                            </li> --}}
-                            {{!-- <li class="nav-item">
-                            <a class="nav-link disabled">Disabled</a>
-                            </li> --}}
                         </ul>
                         <form class="container" style="display: flex; ">
                             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="txtSearch">
@@ -85,7 +79,7 @@
 
     </div>
     
-    <div class="footer" style="background: rgb(193, 245, 250);>
+    <div class="footer" style="background: rgba(247, 250, 252, 0.007);>
         <!-- Footer -->
         <footer class="text-center text-lg-start bg-light text-muted">
             <!-- Section: Social media -->
