--- a/views/editBooks.hbs
+++ b/views/editBooks.hbs
@@ -7,7 +7,6 @@
     <title>Motor Store</title>
     <style>
         h1{
-            text-align: center;
             color: black;
         }
         .container-fluid{
@@ -33,7 +32,10 @@
                                 <a class="nav-link active" aria-current="page" href="#">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="#">Link</a>
+                                <a class="nav-link" href="/addBooks">Add</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="/addBooks">Edit</a>
                             </li>
                             <li class="nav-item">
                             <a class="nav-link disabled">Disabled</a>
