--- a/views/index.hbs
+++ b/views/index.hbs
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <title>Home</title>
     <style>
@@ -23,9 +25,12 @@
                                 <a class="nav-link active" aria-current="page" href="/">Home</a>
                             </li>
                         </ul>
-                        <form class="container" style="display: flex; ">
+                        <form class="container" style="display: flex;">
                             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="txtSearch">
-                            <button class="btn btn-outline-success" type="submit">Search</button>                  
+                            <button class="btn btn-outline-success" type="submit">Search</button>
+                            <a href="#" class="btn btn-info btn-lg">
+                            <span class="glyphicon glyphicon-shopping-cart"></span> Shopping Cart
+                            </a>                  
                         </form>
 
                         {{#if customerI}}
