--- a/views/index.hbs
+++ b/views/index.hbs
@@ -27,16 +27,14 @@
                         </ul>
                         <form class="container" style="display: flex;">
                             <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="txtSearchHome" >
-                            <button class="btn btn-outline-success" type="submit" >Search</button>
-                            <a href="#" class="btn btn-info btn-lg">
-                                
-                            <span class="glyphicon glyphicon-shopping-cart"></span> Cart
-                            </a>                  
+                            <button class="btn btn-outline-success" type="submit" >Search</button>                   
                         </form>
                             
                         {{#if customerI}}
+                        <a href="Cart" class="btn btn-info btn-lg"> Cart </a>
                         <div class="dropdown">
-                        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown">welcome {{customerI.name}}
+                        
+                        <button class="btn btn-primary dropdown-toggle" type="button" data-toggle="dropdown"> {{customerI.name}}
                         <span class="caret"></span></button>
                         <ul class="dropdown-menu">
                             <li><a href="updateProfile">Edit Profile</a></li>
@@ -70,11 +68,15 @@
                                         <a href="/inforProduct?id={{_id}}" style="color: rgb(29, 27, 27); font-size: 1.5rem;"><p class="card-text">{{name}}</p></a>
                                     </div>
                                     <div class="card-body">
-                                        <a href="/inforProduct"><p class="card-text">Mua Ngay</p></a>
+                                        <a href="/inforProduct?id={{_id}}"><p class="card-text">Mua Ngay</p></a>
                                     </div>
-                                    <div class="card-body">
-                                        <a href="Cart"><p class="card-text">Thêm Vào Giỏ Hàng</p></a>
-                                    </div>
+                                    {{!-- <div class="card-body">
+                                        <a href="/bookDetail?id={{_id}}"><p class="card-text">Thêm Vào Giỏ Hàng</p></a>                                       
+                                    </div> --}}
+                                    <form action="/buy" method="post">
+                                        <input type="hidden" name="txtId" value="{{_id}}">
+                                        <button type="submit" class="btn btn-outline-success">Thêm Vào Giỏ Hàng</button>
+                                    </form>
                                 </div>
                             {{/each}}
                                 <div class="card-body" style="text-align: center;">
