--- a/views/index.hbs
+++ b/views/index.hbs
@@ -70,12 +70,10 @@
                                     <div class="card-body">
                                         <a href="/inforProduct?id={{_id}}"><p class="card-text">Mua Ngay</p></a>
                                     </div>
-                                    {{!-- <div class="card-body">
-                                        <a href="/bookDetail?id={{_id}}"><p class="card-text">Thêm Vào Giỏ Hàng</p></a>                                       
-                                    </div> --}}
                                     <form action="/buy" method="post">
                                         <input type="hidden" name="txtId" value="{{_id}}">
                                         <button type="submit" class="btn btn-outline-success">Thêm Vào Giỏ Hàng</button>
+                                        
                                     </form>
                                 </div>
                             {{/each}}
@@ -213,7 +211,7 @@
             
         });        
     });​ --}}
-</script>   
+{{!-- </script>    --}}
 </body>
 
 </html>
