--- a/views/index.hbs
+++ b/views/index.hbs
@@ -39,7 +39,7 @@
                         <ul class="dropdown-menu">
                             <li><a href="updateProfile">Edit Profile</a></li>
                             <li><a href="#">CSS</a></li>
-                            <li><a href="#">Log out</a></li>
+                            <li><a href="/logout">Log out</a></li>
                         </ul>
                         </div>
                         {{else}}
@@ -199,7 +199,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     
- {{!-- <script type="text/javascript">
+ <script type="text/javascript">
     $(document).ready(function(){
 
     $("#search").on("click", function(e){
@@ -212,7 +212,7 @@
         }
             
         });        
-    });​ --}}
+    });​
 </script>   
 </body>
 
